--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">BMCurrency</string>
+    <string name="base">Base</string>
+    <string name="to">To</string>
+    <string name="from">From</string>
+    <string name="amount">Amount</string>
+    <string name="zero_amount">0</string>
+    <string name="result">Result</string>
 </resources>
